Enhance version download progress/messages
Change the download progress API to include a descriptive message (MinecraftVersionDownloader now accepts BiConsumer<Integer,String>) and propagate that through the MojangVersionDownloader implementation. LauncherService and DownloadStatus were updated to store and surface human-friendly status messages (e.g. "Esperando…", "Ya instalada", detailed error text) and to better detect complete installations by verifying extracted native binaries. Added VersionInstallation and adjusted internal API/UI classes to accommodate the richer download status information. Also include logging for failed downloads and improved download/validation logic in the Mojang downloader.